[package]
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"
name = "raqote"
version = "0.8.1-alpha.0"
description = "2D graphics library"
license = "BSD-3-Clause"
repository = "https://github.com/jrmuizel/raqote"
documentation = "https://docs.rs/raqote"
readme = "README.md"
keywords = ["2d", "graphics"]
categories = ["graphics"]

[dependencies]
euclid = { version = "0.22", default-features = false }
font-kit = { version = "0.10", optional = true }
lyon_geom = { version = "0.16", git = "https://github.com/1tgr/lyon.git", branch = "no-std" }
num-traits = { version = "0.2.10", default-features = false }
pathfinder_geometry = { version = "0.5", optional = true }
png = { version = "0.16", optional = true }
sw-composite = { version = "0.7.14", git = "https://github.com/1tgr/sw-composite.git", branch = "no-std", default-features = false }
typed-arena = { version = "2.0", default-features = false }

[features]
default = ["std", "text"]
std = ["png", "sw-composite/std"]
text = ["font-kit", "pathfinder_geometry"]
